feat: first slcanInterface impl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+find_package(Threads REQUIRED)
 # find_package(PkgConfig REQUIRED)
 
 add_compile_options(
@@ -16,11 +17,10 @@ add_compile_options(
   # -Wconversion -Werror
 )
 
-add_library(${PROJECT_NAME}lib STATIC src/CanMessage.cpp)
+add_library(${PROJECT_NAME}lib STATIC src/CanMessage.cpp src/slcanInterface.cpp)
 target_include_directories(${PROJECT_NAME}lib PUBLIC ${CMAKE_SOURCE_DIR}/include)
-# target_link_libraries(${PROJECT_NAME}lib PUBLIC Threads::Threads dl pthread m)
-
-
+# add_executable(${PROJECT_NAME} src/main.cpp)
+# target_link_libraries(${PROJECT_NAME} ${PROJECT_NAME}lib)
 # include(GNUInstallDirs)
 # install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
 
