style: cmake naming

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,12 +1,14 @@
 find_package(doctest REQUIRED)
 include(CTest)
 
-add_executable(CanMessage CanMessage.cpp)
-target_include_directories(CanMessage PRIVATE ${CMAKE_SOURCE_DIR}/include)
-target_link_libraries(CanMessage PRIVATE lib${PROJECT_NAME} doctest::doctest)
-add_test(NAME CanMessage COMMAND CanMessage)
+set(T1 CanMessageTest)
+add_executable(${T1} CanMessage.cpp)
+target_include_directories(${T1} PRIVATE ${CMAKE_SOURCE_DIR}/include)
+target_link_libraries(${T1} PRIVATE ${PROJECT_NAME} doctest::doctest)
+add_test(NAME ${T1} COMMAND ${T1})
 
-add_executable(slcanInterface slcanInterface.cpp)
-target_include_directories(slcanInterface PRIVATE ${CMAKE_SOURCE_DIR}/include)
-target_link_libraries(slcanInterface PRIVATE lib${PROJECT_NAME} doctest::doctest)
-add_test(NAME slcanInterface COMMAND slcanInterface)
+set(T2 slcanInterfaceTest)
+add_executable(${T2} slcanInterface.cpp)
+target_include_directories(${T2} PRIVATE ${CMAKE_SOURCE_DIR}/include)
+target_link_libraries(${T2} PRIVATE ${PROJECT_NAME} doctest::doctest)
+add_test(NAME ${T2} COMMAND ${T2})
